--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "budget-pwa",
+  "name": "budget-app",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "lite-server": "lite-server"
@@ -24,11 +23,5 @@
     "express": "^4.17.1",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
-  },
-  "devDependencies": {
-    "file-loader": "^6.2.0",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-pwa-manifest": "^4.3.0"
   }
 }
